# flerp

./: Cargo.toml  README.MD  fancypoem.txt  loremipsum.txt
src/: app.rs  app_structs.rs  file_utils.rs  lib.rs  main.rs  settings.rs  text_analysis.rs  ui_components.rs
