[package]
name = "flerp"
version = "0.5.0"
edition = "2021"
authors = ["Huseyn"]
description = "CLI tool that does XYZ"
license = "MIT"
repository = "https://github.com/Huseynteymurzade28/flerp"
homepage = "https://github.com/Huseynteymurzade28/flerp"
readme = "README.MD"


[dependencies]
colored = "3.0.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
pdf-extract = "0.9.0"
clap = {version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
regex = "1.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
